# gputest

./: .gitignore  AlgoC0 1.docx  CMakeLists.txt  README.txt  extern.h  host.cpp  kernel.h  python_bindings.cpp  requirements.in  test.cpp  test.py
C0/: alert_graphs.py  closure.py  item.py  map_of_squares.py  test_image_to_squares.py
copy_2D/: CMakeLists.txt  extern.h  gpu2d.cu  gpu2d.h  host2d.cpp  python_bindings.cpp
copy_2D/Jupyter/: gpu_cpu_copy.ipynb
copy_gpu_cpu_shared_random/: CMakeLists.txt  README.md  gpucopy_vs_num_elements_simple.ipynb  host.cpp  python_bindings.cpp  test.cpp  test_module_install.py
cuda/copy_2D/: CMakeLists.txt  CMakeSettings.json  README.md  cvlib.cpp  cvlib.h  extern.h  host.cpp  kernel.cu  kernel.h  python_bindings.cpp  test.cpp
cuda/copy_2D/Jupyter/: gpu_cpu_copy.ipynb  gpucopy_vs_num_elements.ipynb
cuda/copy_gpu_cpu_shared_random/: CMakeLists.txt  kernel.cu
cuda/opencv_dll/: CMakeLists.txt  cvlib.cpp
one-off/: closechain.py  conftest.py  couples_triples.py  flatten.py  item.py  mergable.ipynb  plan  pytest.ini  quadprocessing.py  random_items.pkl  resolvechain.py  rowmerge.py  rowmergebasics.py  rowmergeinputs.py  testplan
one-off/jupyter/: Untitled.ipynb  one-off-2.ipynb  one-off-binary-tree.ipynb
one-off/one-off-1d/: items.py
one-off/one-off-1d/tests/: test_couples_triples.py  test_fail1
one-off/show/: show_couples_triples.py  test_show_couples_triples_step.py
one-off/tests/: test_couples_triples_random.py  test_couples_triples_step.py  test_cover_rowmerge.py  test_rowmerge.py  test_rowmerge_quality.py  test_tree_visual.py  test_visual.py
one-off2/: conftest.py  plan_alt2  rowmerge_flatten2.py  rowmergebasics2.py  test_rowmerge2.py
one-off2/tests/: test_rowmerge2.py
one-off_stripe/: 1x1near_full_square  alert_graphs.py  closure.py  data_structure  extensions.py  extensions2.py  image_to_squares.py  implementation  item.py  map_of_squares.py  plan3  plan3b  plan3c  plan3irreducible  plan3irreducible_storage  plan3irreducible_storage0  representation.py  test_image_to_squares.py  test_representation.py  test_stripes.py  test_utils.py
